--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -29,7 +29,7 @@
 		<div class="mobilemenulinks" id="mobilemenulinks">
 				<a href="/" onMouseOver="this.innerHTML='home &larrhk;'" onMouseOut="this.innerHTML='home'">home</a><br>
 				<a href="/archive/art/" onMouseOver="this.innerHTML='art &larrhk;'" onMouseOut="this.innerHTML='art'">art</a><br>
-				<a href="/archive/video/" onMouseOver="this.innerHTML='video &larrhk;'" onMouseOut="this.innerHTML='video'">video </a><br>
+				<a href="/archive/videos/" onMouseOver="this.innerHTML='video &larrhk;'" onMouseOut="this.innerHTML='video'">video </a><br>
 				<a href="/blog/" onMouseOver="this.innerHTML='blog &larrhk;'" onMouseOut="this.innerHTML='blog'">blog </a><br>
 				<a href="/about/" onMouseOver="this.innerHTML='about &larrhk;'" onMouseOut="this.innerHTML='about'">about </a><br>
 				<a href="/archive/links/" onMouseOver="this.innerHTML='links &larrhk;'" onMouseOut="this.innerHTML='links'">links </a>
@@ -53,7 +53,7 @@
 		<div class="linksection">
       <a href="/" onMouseOver="this.innerHTML='home &larrhk;'" onMouseOut="this.innerHTML='home'">home</a><br>
       <a href="/archive/art/" onMouseOver="this.innerHTML='art &larrhk;'" onMouseOut="this.innerHTML='art'">art</a><br>
-      <a href="/archive/video/" onMouseOver="this.innerHTML='video &larrhk;'" onMouseOut="this.innerHTML='video'">video </a><br>
+      <a href="/archive/videos/" onMouseOver="this.innerHTML='video &larrhk;'" onMouseOut="this.innerHTML='video'">video </a><br>
       <a href="/archive/blog/" onMouseOver="this.innerHTML='blog &larrhk;'" onMouseOut="this.innerHTML='blog'">blog </a><br>
       <a href="/archive/about/" onMouseOver="this.innerHTML='about &larrhk;'" onMouseOut="this.innerHTML='about'">about </a><br>
       <a href="/archive/links/" onMouseOver="this.innerHTML='links &larrhk;'" onMouseOut="this.innerHTML='links'">links </a>
