--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -32,7 +32,7 @@
 			<a href="/archive/videos/" onMouseOver="this.innerHTML='video &larrhk;'" onMouseOut="this.innerHTML='video'">video </a><br>
 			<a href="/blog/" onMouseOver="this.innerHTML='blog &larrhk;'" onMouseOut="this.innerHTML='blog'">blog </a><br>
 			<a href="/about/" onMouseOver="this.innerHTML='about &larrhk;'" onMouseOut="this.innerHTML='about'">about </a><br>
-			<a href="/archive/links/" onMouseOver="this.innerHTML='links &larrhk;'" onMouseOut="this.innerHTML='links'">links </a>
+			<a href="https://links.rubberocket.com" onMouseOver="this.innerHTML='links &larrhk;'" onMouseOut="this.innerHTML='links'" target="_blank">links </a>
 		</div>
 
 		<script>
@@ -56,7 +56,7 @@
 			<a href="/archive/videos/" onMouseOver="this.innerHTML='video &larrhk;'" onMouseOut="this.innerHTML='video'">video </a><br>
 			<a href="/blog/" onMouseOver="this.innerHTML='blog &larrhk;'" onMouseOut="this.innerHTML='blog'">blog </a><br>
 			<a href="/about/" onMouseOver="this.innerHTML='about &larrhk;'" onMouseOut="this.innerHTML='about'">about </a><br>
-      			<a href="/archive/links/" onMouseOver="this.innerHTML='links &larrhk;'" onMouseOut="this.innerHTML='links'">links </a>
+      			<a href="https://links.rubberocket.com" onMouseOver="this.innerHTML='links &larrhk;'" onMouseOut="this.innerHTML='links'" target="_blank">links </a>
     		</div>
 		
 		<div class="logo">
