--- a/sitedir/media/styles/main.css
+++ b/sitedir/media/styles/main.css
@@ -61,6 +61,7 @@
 }
 .main_thebar {
 	background: #C6332D;
+	color: #FFFFFF;
 	width: 26%;
 	padding: 2%;
 	height: auto;
@@ -70,16 +71,23 @@
 
 /* color links for header */
 .header_links a, a:link, a:visited, a:active {
-	color: #000000;
-	text-decoration: none;
+	color: #C6332D;
 }
 .header_links a:hover {
 	color: #FFFFFF;
-	text-decoration: underline;
 }
 .header_links a:active {
+	color: #000000;
+}
+/* color links for everything else */
+a, a:link, a:visited, a:active {
+	color: #000000;
+}
+a:hover {
+	color: #FFFFFF;
+}
+a:active {
 	color: #C6332D;
-	text-decoration: none;
 }
 
 @media only screen and (max-width: 767px) {
@@ -107,15 +115,12 @@
 
 	.header_links a, a:link, a:visited, a:active {
 	color: #FFFFFF;
-	text-decoration: none;
 	}
 	.header_links a:hover {
 	color: #FFCC51;
-	text-decoration: underline;
 	}
 	.header_links a:active {
 	color: #C6332D;
-	text-decoration: none;
 	}
 	.main {
 	flex-direction: column;
