--- a/sitedir/art/theart/template/index.html
+++ b/sitedir/art/theart/template/index.html
@@ -20,6 +20,7 @@
 			<meta name="robots" content="index, follow">
 	
 			<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
 			<meta name="language" content="English">
 	
 			<meta name="author" content="Aleph Diallo">
@@ -81,15 +82,30 @@
 		<!-- your content goes here... -->
 		<div class="main_content">
 		<!-- InstanceBeginEditable name="main_content" -->
+		<!--metadata-->
+		<div style="display: none;">
+			<span class="dt-published">YYYY-MM-DD</span>
+			<span class="dt-updated">YYYY-MM-DD</span>
+		</div>
+		<article class="h-entry">
 		<!--title-->
-		<h1>TitleHere</h1>
+		<h1 class="p-name">TitleHere</h1>
 		<!--Image-->
 		<img src="../media/art/arthere.jpeg" alt="TitleHere" title="TitleHere">
 		<br>
+		<div class="e-content">
 		<p>
 		<!--description-->
 		Description description description description description description description description description. Description description description description description description description description, description description description description. Description description description!  Description description description... description description description.  Description description! Description, description description. D-D-D-D-DDDDD-Description!  Description description description description description description description description description description description description description description description, description description description description description description description description description!
 		</p>
+		</div>
+		<!--short ver of description.-->
+		<div class="p-summary" style="display: none;">
+			<p>
+				Description, only shorter.
+			</p>
+		</div>
+		</article>
 		</div>
 		<!-- InstanceEndEditable -->
 		</div>
