--- a/sitedir/art/theart/template/index.html
+++ b/sitedir/art/theart/template/index.html
@@ -86,6 +86,7 @@
 		<div style="display: none;">
 			<span class="dt-published">YYYY-MM-DD</span>
 			<span class="dt-updated">YYYY-MM-DD</span>
+			<a rel="author" class="p-author h-card" href="https://rubberocket.com">Aleph Diallo</a>
 		</div>
 		<article class="h-entry">
 		<!--title-->
