--- a/sitedir/art/theart/template/index.html
+++ b/sitedir/art/theart/template/index.html
@@ -87,6 +87,7 @@
 			<span class="dt-published">YYYY-MM-DD</span>
 			<span class="dt-updated">YYYY-MM-DD</span>
 			<a rel="author" class="p-author h-card" href="https://rubberocket.com">Aleph Diallo</a>
+			<a class="p-category" href="https://rubberocket.com/art/">art</a>
 		</div>
 		<article class="h-entry">
 		<!--title-->
