--- a/sitedir/art/theart/template/index.html
+++ b/sitedir/art/theart/template/index.html
@@ -15,7 +15,7 @@
 	
 			<meta name="description" content="Short description">
 	
-			<meta name="keywords" content="rubberocket, rubberocket.com, Aleph Diallo, Aleph's Website, alephdfilms, rubber rocket, Rubber Rocket, rubberrocket, RubberRocket Studios, Cartoons, Animations, Art, Videos, Games, Downloads">
+			<meta name="keywords" content="badbunsen.com, BadBunsen, Bad Bunsen, rubberocket, rubberocket.com, Aleph Diallo, Aleph's Website, alephdfilms, rubber rocket, Rubber Rocket, rubberrocket, RubberRocket Studios, Cartoons, Animations, Art, Videos, Games, Downloads">
 	
 			<meta name="robots" content="index, follow">
 	
