--- a/sitedir/art/theart/template/index.html
+++ b/sitedir/art/theart/template/index.html
@@ -83,7 +83,7 @@
 		<div class="main_content">
 		<!-- InstanceBeginEditable name="main_content" -->
 		<!--metadata-->
-		<div style="display: none;">
+		<div class="h_indieweb_metadata">
 			<span class="dt-published">YYYY-MM-DD</span>
 			<span class="dt-updated">YYYY-MM-DD</span>
 			<a rel="author" class="p-author h-card" href="https://rubberocket.com">Aleph Diallo</a>
