--- a/sitedir/media/styles/main.css
+++ b/sitedir/media/styles/main.css
@@ -68,7 +68,7 @@
 }
 
 /* color links for header */
-.header_links a, a:link, a:visited, a:active {
+.header_links a, .header_links a:link, .header_links a:visited {
 	color: #C6332D;
 }
 .header_links a:hover {
@@ -76,6 +76,16 @@
 }
 .header_links a:active {
 	color: #000000;
+}
+/* color links for sidebar */
+a, a:link, a:visited, a:active {
+	color: #FFFFFF;
+}
+a:hover {
+	color: #FFCC51;
+}
+a:active {
+	color: #C6332D;
 }
 /* color links for everything else */
 a, a:link, a:visited, a:active {
