--- a/sitedir/media/styles/main.css
+++ b/sitedir/media/styles/main.css
@@ -1,157 +1,89 @@
-@font-face {
-	font-family: "W95FA";
-	src: 	local("W95FA"),
-			url("https://www.rubberocket.com/media/fonts/W95FA.otf")	format("opentype"),
-			url("https://www.rubberocket.com/media/fonts/w95fa.woff")	format("woff"),
-			url("https://www.rubberocket.com/media/fonts/w95fa.woff2")	format("woff");
-} /* pixel font */
-
-/* pixelate certain images */
-.pixelme {
-	image-rendering: pixelated;
-}
-
-.mainbox {
-	width: 620px;
-	margin: auto;
-	background: #ffffff; 
+body {
+	background: #FFCC00;
 	color: #000000;
-	overflow: scroll;
-	padding: 8px;
-}
-.header {
-	display: block;
-	text-align: center;
-}
-.header_img {
-	width: 100%; /* some idiot fucked up the width in chrome */
-	height: auto;
-}
-.header_wordmark {
-	width: 190px;
-	display: none;
-}
-.header_links {
-	width: 100%;
-	background: #FCCC51;
-	font-family: "W95FA", monospace;
-	font-weight: bold;
-	text-align: left;
+	font-family: Arial, Helvetica, sans-serif;
 	margin: 0;
 }
-.header_links_coolline {
+
+/* hiding indiewebcamp-related stuff */
+.h-card, .indieweb-auth {
 	display: none;
 }
 
-.main {
+/* header */
+.site_main_header {
 	width: 100%;
-	display: flex;
-	flex-direction: row;
-}
-
-.main_content {
-	background: #FCCC51;
-	width: 66%;
-	padding: 2%;
-	height: auto;
-	float: left;
+	height: 128px;
 	display: block;
-}
-.main_thebar {
-	background: #C6332D;
-	color: #FFFFFF;
-	width: 26%;
-	padding: 2%;
-	height: auto;
-	float: right;
-	display: block;
-}
-
-/* color links for header */
-.header_links a, .header_links a:link, .header_links a:visited {
-	color: #C6332D;
-}
-.header_links a:hover {
-	color: #FFFFFF;
-}
-.header_links a:active {
-	color: #000000;
-}
-/* color links for sidebar */
-.main_thebar a, .main_thebar a:link, .main_thebar a:visited {
-	color: #FFFFFF;
-}
-a:hover {
-	color: #FFCC51;
-}
-a:active {
-	color: #000000;
-}
-/* color links for everything else */
-a, a:link, a:visited, a:active {
-	color: #000000;
-}
-a:hover {
-	color: #FFFFFF;
-}
-a:active {
-	color: #C6332D;
-}
-
-@media only screen and (max-width: 767px) {
-	.mainbox {
-	margin: 0 auto;
-	position: fixed;
+	background-color: #fff;
+	color: #000;
+	margin: auto;
+	position: sticky;
 	top: 0;
 	left: 0;
-	display: block; 
+}
+
+/* wordmark */
+.home_wordmark {
+	display: block;
+	position: absolute;
+	transform: rotate(90deg);
+	top: 0;
+	left: 0;
+	transform-origin: 30px 60px;
+	width: 512px;
+	height: 70.320px;
+	background: url("../logos/alephswebsite/wordmark_horizontal.svg");
+}
+.navlinks {
+	width: clamp(128px, 20%, 200px);
+	height: 260.778px;
+	display: block;
+	position: absolute;
+	text-align: right;
+	top: 60px;
+	right: 30px;
+}
+.anavlink {
 	width: 100%;
-	height: 100%;
-	padding: 0px;
-	}
-	.header_img {
-	display: none;
-	}
-	.header_wordmark, .header_links_coolline {
-	display: block;
-	}
-	.header_links {
-	background: #000000;
-	color: #FFFFFF;
-	margin-top: -1px;
-	}
-
-	.header_links a, a:link, a:visited, a:active {
-	color: #FFFFFF;
-	}
-	.header_links a:hover {
-	color: #FFCC51;
-	}
-	.header_links a:active {
-	color: #C6332D;
-	}
-	.main {
-	flex-direction: column;
-	}
-	.main_content {
-	width: 96%;
-	display: block;
-	}
-	.main_thebar {
-	width: 96%;
-	display: block;
-	}
 }
-@media only screen and (min-width: 768px) {
-	.mainbox {
-	border: 5px solid black;
-	}
-	.header_links {
-	margin-top: -4px;
-	}
+.anavlink_small {
+	width: 50%;
 }
 
-/* microformats for indieweb, hidden but still visible by parsers */
-.h-card, .h_indieweb_metadata {
-	display: none;
+/* sticky notes */
+.stickynote {
+	width: 136px;
+	height: 142px;
+	display: block;
+	position: absolute;
+	z-index: 9;
+	background-color: #ccc;
+	padding: 2px;
+	border: outset #ccc 2px;
+	font-family: monospace;
+}
+.stickynote_titlebar {
+	padding: 4px;
+	font-size: 12px;
+	curson: move;
+	z-index: 10;
+	background-color: #009;
+	color: #fff;
+	cursor: move;
+	font-family: Arial, Helvetica, sans-serif;
+}
+.stickynote_scroll {
+	width: 136px;
+	height: 120px;
+	margin: 2px;
+	overflow: scroll;
+}
+
+
+/* mobile stuff */
+@media only screen and (max-width: 768px) {
+	.navlinks {
+		width: clamp(0px, 40%, 220px);
+	}
 }
