--- a/sitedir/media/styles/main.css
+++ b/sitedir/media/styles/main.css
@@ -5,10 +5,30 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+a:link, a:visited {
+	color: #ff6600;
+}
+a:hover {
+	color: #ff0000;
+}
+a:active {
+	color: #990000;
+}
+
 /* page-specific body colors */
 body.body_404 {
 	background: #000;
 	color: #FFCC00;
+}
+
+.body_404 a:link, .body_404 a:visited {
+	color: #ff0000;
+}
+.body_404 a:hover {
+	color: #ffcccc;
+}
+.body_404 a:active {
+	color: #ff9999;
 }
 
 /* hiding indiewebcamp-related stuff */
