--- a/sitedir/stuff/stylesheets/main.css
+++ b/sitedir/stuff/stylesheets/main.css
@@ -93,6 +93,11 @@ you can add them directly to the <div id="header"></div> element! */
 	text-decoration: underline;
 }
 
+#navbar_blah {
+	width: clamp(20px, 2vw, 32px);
+	height: clamp(20px, 2vw, 32px);
+}
+
 #flex {
 	display: flex;
 }
