--- a/sitedir/stuff/stylesheets/main.css
+++ b/sitedir/stuff/stylesheets/main.css
@@ -1,226 +1,52 @@
-/* user styles */
-
-/* styles are what change the color and sizes of stuff on your site. */
-
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	margin: 0;
 	background-color: #110000;
 	background-size: 65px;
 	color: #fceaff;
-	background-image: var(--body-bg-image);
 }
-
-* {
-	box-sizing: border-box;
-}
-
-/* below this line is CSS for the layout */
-
-/* this is a CSS comment
-to uncomment a line of CSS, remove the * and the /
-before and after the text */
-
-
-/* the "container" is what wraps your entire website */
-/* if you want something (like the header) to be Wider than
-the other elements, you will need to move that div outside
-of the container */
-#container {
-	max-width: 900px;
-	/* this is the width of your layout! */
-	/* if you change the above value, scroll to the bottom
-and change the media query according to the comment! */
-	margin: 0 auto;
-	/* this centers the entire page */
-}
-	
-/* the area below is for all links on your page
-EXCEPT for the navigation */
-#container a {
-	color: #ff0000;
-	font-weight: bold;
-	/* if you want to remove the underline
-you can add a line below here that says:
-text-decoration:none; */
-}
-
-#header {
-	width: 100%;
-	background-color: #5e4e8c;
-	/* header color here! */
-	height: 150px;
-	/* this is only for a background image! */
-	/* if you want to put images IN the header, 
-you can add them directly to the <div id="header"></div> element! */
-	background-image: var(--header-image);
-	background-size: 100%;
-}
-
-/* navigation section!! */
-#navbar {
-	height: 40px;
-	background-color: #110000;
-	/* navbar color */
-	width: 100%;
-}
-
-#navbar ul {
-	display: flex;
-	padding: 0;
-	margin: 0;
-	list-style-type: none;
-	justify-content: space-evenly;
-}
-
-#navbar li {
-	padding-top: 10px;
-}
-
-/* navigation links*/
-#navbar li a {
-	color: #ff0000;
-	/* navbar text color */
-	font-weight: 800;
-	text-decoration: none;
-	font-size: clamp(14px, 2vw, 16px);
-	/* this removes the underline */
-}
-
-/* navigation link when a link is hovered over */
-#navbar li a:hover {
-	color: #c47e7e;
-	text-decoration: underline;
-}
-
-#flex {
-	display: flex;
-}
-
-/* this colors BOTH sidebars
-if you want to style them separately,
-create styles for #leftSidebar and #rightSidebar */
-aside {
-	background-color: #451414;
-	width: 200px;
-	padding: 20px;
-	font-size: smaller;
-	/* this makes the sidebar text slightly smaller */
-}
-
-
-/* this is the color of the main content area,
-between the sidebars! */
-main {
-	background-color: #6e2525;
-	flex: 1;
-	padding: 20px;
-	order: 2;
-}
-
-/* what's this "order" stuff about??
-allow me to explain!
-if you're using both sidebars, the "order" value
-tells the CSS the order in which to display them.
-left sidebar is 1, content is 2, and right sidebar is 3! */
-
-*/ #leftSidebar {
-	order: 1;
-}
-
-#rightSidebar {
-	order: 3;
-}
-
-footer {
-	background-color: #110000;
-	/* background color for footer */
-	width: 100%;
-	padding: 10px;
+.header {
+	width: calc(100% - 40px);
+	height: auto;
+	display: block;
+	position: sticky;
 	text-align: center;
-	/* this centers the footer text */
+	background-color: #000;
+	padding: 20px;
 }
-
-h1,
-h2,
-h3 {
-	color: #ff0000;
+a:visited, a:link {
+    color: #cf1818;
+    font-weight: bold;
+	font-family: Arial, Helvetica, sans-serif;
 }
-
-h1 {
-	font-size: 25px;
+a:hover {
+    color: #ec8383;
 }
-
-strong {
-	/* this styles bold text */
-	color: #ff0000;
+a:active {
+    color:#8b1515
 }
-
-/* this is just a cool box, it's the darker colored one */
-.box {
-	background-color: #110000;
-	border: 1px solid #ff0000;
+.main {
 	padding: 10px;
+	min-width: 360px;
+	width: 60%;
+	max-width: 640px;
+	margin: auto;
+	font-family: 'Times New Roman', Times, serif;
 }
-
-/* CSS for extras */
-
-#topBar {
-	width: 100%;
-	height: 30px;
-	padding: 10px;
-	font-size: smaller;
-	background-color: #110000;
+h1, h2, h3, h4, h5, h6 {
+	font-family: Arial, Helvetica, sans-serif;
 }
-
-
-/* BELOW THIS POINT IS MEDIA QUERY */
-
-/* so you wanna change the width of your page? 
-by default, the container width is 900px.
-in order to keep things responsive, take your new height,
-and then subtrack it by 100. use this new number as the 
-"max-width" value below
-*/
-
-@media only screen and (max-width: 800px) {
-	#flex {
-		flex-wrap: wrap;
-	}
-
-	aside {
-		width: 100%;
-	}
-
-	/* the order of the items is adjusted here for responsiveness!
-since the sidebars would be too small on a mobile device.
-feel free to play around with the order!
-*/
-	main {
-		order: 1;
-	}
-
-	#leftSidebar {
-		order: 2;
-	}
-
-	#rightSidebar {
-		order: 3;
-	}
-
-	#navbar ul {
-		flex-wrap: wrap;
-	}
+.footer {
+    width: calc(100% - 16px);
+    display: block;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+	padding: 8px;
+    background-color: #000000;
+	text-align: center;
 }
-
-.box_updates {
-	height: 256px;
-}
-
-.scroll {
-	overflow: scroll;
-}
-
-.copyright {
-	font-size: smaller;
+.footerspace {
+	height: 72px;
+	display: block;
 }
