--- a/sitedir/stuff/stylesheets/main.css
+++ b/sitedir/stuff/stylesheets/main.css
@@ -1,9 +1,17 @@
+@font-face {
+    font-family: 'Noto Emoji';
+    src: url("../fonts/NotoEmoji.ttf");
+}
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	margin: 0;
 	background-color: #110000;
 	background-size: 65px;
 	color: #fceaff;
+	cursor: url("../grafx/sitegrafx/cursors/default.gif"), default;
+}
+a:hover, a:active {
+	cursor: url("../grafx/sitegrafx/cursors/pointer.gif"), pointer;
 }
 .header {
 	width: calc(100% - 40px);
