noscript version, add scrolling for preview image just in case, etc

--- a/sitedir/stuff/stylesheets/art.css
+++ b/sitedir/stuff/stylesheets/art.css
@@ -61,6 +61,12 @@ border-radius: auto;
 .thePreview {
     text-align: center;
 }
+.previewbox {
+	width: 100%;
+	height: 240px;
+	display: block;
+	overflow: scroll;
+}
 .theupperpart {
     width: 100%;
     height: auto;
