templatify pages with dreamweaver, exchange svgs for gifs... pt 1

--- a/sitedir/stuff/stylesheets/rootindex.css
+++ b/sitedir/stuff/stylesheets/rootindex.css
@@ -17,7 +17,7 @@
 }
 .copybox {
     background-color: #ffcc00;
-    background-image: url("../grafx/sitegrafx/rootindex/copy.svg");
+    background-image: url("../grafx/sitegrafx/rootindex/copy.gif");
 }
 .navlinks {
     background-color: #e85353;
