templatify pages with dreamweaver, exchange svgs for gifs... pt 2

--- a/sitedir/stuff/stylesheets/rootindex.css
+++ b/sitedir/stuff/stylesheets/rootindex.css
@@ -16,11 +16,10 @@
     overflow: hidden;
 }
 .copybox {
-    background-color: #ffcc00;
     background-image: url("../grafx/sitegrafx/rootindex/copy.gif");
 }
 .navlinks {
-    background-color: #e85353;
+    background-image: url("../grafx/sitegrafx/rootindex/navlinks.gif");
     width: 157px;
     height: 157px;
     font-size: small;
