--- a/sitedir/style.css
+++ b/sitedir/style.css
@@ -33,18 +33,63 @@ html, body {
 .invert {
     filter: invert(0%);
 }
+.dark .emoticon {
+    filter: invert(0%);
+}
+.emoticon {
+    filter: invert(100%);
+    width: 100%;
+    object-fit: scale-down;
+}
+.bb_nav {
+    background-color: var(--main-black);
+    width: 64px;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+.navbut {
+    width: 100%;
+    object-fit: scale-down;
+}
+@media screen and (max-width: 781px) {
+    .navbut {
+        width: 48px;
+        height: 48px;
+    }
+    .emoticon {
+        width: 48px;
+        object-fit: scale-down;
+    }
+    .bb_nav {
+    width: calc(100% - 4px);
+    height: 60px;
+    padding: 2px;
+    display: block;
+    top: 0px;
+    left: 0px;
+    position: sticky;
+    }
+}
 @media(prefers-color-scheme: dark) {
     .dark {
         background-color: var(--main-black);
         color: var(--main-white);
         font-family: sans-serif;
     }
+    .bb_nav {
+        background-color: var(--main-white);
+    }
     .invert {
         filter: invert(100%);
+    }
+    .emoticon {
+        filter: invert(0%);
     }
 }
 .navtag {
     width: 50px;
     height: 50px;
-    object-fit: contain;
+    object-fit: scale-down;
 }
